--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -10,9 +10,20 @@
     <div class="sp-sub-text-wrapper">
       <span class="sp-sub-title">すでにアカウントを持っている人を選択する</span>
     </div>
-    
-    <% if current_user.attack_groups.present? %>
+
+    <% if current_user.friend_users.blank? %>
+        <p class="post-member__exception-title">
+          <span>フレンドがいません。</span>
+          <span>
+            ヘッダーの<%= image_tag "search.png", class:"post-member__exception-search-img" %>からフレンド追加できます。
+          </span>
+        </p>
+    <% else %>
+        <%= render "shared/friend_list",
+          model: @attackers,
+          url: attack_groups_path,
+          listed_friends: @host_friends
+        %>
     <% end %>
-    <%= render "shared/attack_groups/form" %>
   </div>
 </div>
