--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -25,5 +25,14 @@
           listed_friends: @host_friends
         %>
     <% end %>
+
+    <div class="lines-on-sides">
+      <span>アカウントを持っていない人を招待する</span>
+    </div>
+    <div class="sp-sub-text-wrapper">
+      <span class="sp-sub-title">アカウントを持っていない人を招待する</span>
+    </div>
+
+    
   </div>
 </div>
