--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -48,25 +48,7 @@
     </div>
 
     <div class="post-member-form">
-      <%= form_for(resource, as: resource_name, url: invitation_path(resource_name)) do |f| %>
-        <%= render "shared/error_messages", resource: resource %>
-        <div class="form">
-          <div class="field">
-            <div class="label">
-              <label>
-                招待したい人のメールアドレス
-              </label>
-            </div>
-            <%= f.email_field :email, type: "email", :placeholder => "example@matchapp.jp", required: "required" %>
-            <span class="form-attention-text">※登録した同性ユーザーは自動でメンバーに追加されます。</span>
-          </div>
-          <div class="field">
-            <div class="button-wrapper">
-              <%= f.submit "✉ 招待メールを送信", class:"app-button conversion" %>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <%= render "shared/register_invite" %>
     </div>
   </div>
 </div>
