--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -33,6 +33,8 @@
       <span class="sp-sub-title">アカウントを持っていない人を招待する</span>
     </div>
 
-    
+    <div class="post-member-form">
+      <%= render "shared/register_invite" %>
+    </div>
   </div>
 </div>
