--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -7,7 +7,7 @@
     <% if current_user.attack_groups.present? %>
     <div style="margin-bottom: 24px;">
       <span>作成済チーム数：</span>
-      <%= link_to "#{@attack_groups_number}", attack_groups_path, style:"text-decoration: underline;" %>
+      <%= link_to "#{@attack_groups_number}", attack_groups_path, class: "hover-opacity",style:"text-decoration: underline;" %>
     </div>
     <% end %>
 
