--- a/app/views/user/attack_groups/index.html.erb
+++ b/app/views/user/attack_groups/index.html.erb
@@ -35,6 +35,7 @@
 .attack_groups__item-title-wrapper{
   text-align: center;
   margin-bottom: 12px;
+  overflow-x: scroll;
 }
 
 .attack_groups__users-item-wrapper{
