--- a/app/views/user/attack_groups/index.html.erb
+++ b/app/views/user/attack_groups/index.html.erb
@@ -3,34 +3,44 @@
         <h1 style="text-align:center; padding-bottom: 0px;">
           アタックチーム一覧
         </h1>
-        <div class="attack_groups__wrapper">
-            <% @attack_groups.each do |group| %>
-                <div class="attack_groups__item">
-                    <div class="attack_groups__item-title-wrapper">
-                        <span class="attack_groups__item-title">アタックチーム<%= group.group_number %></span>
-                        <div class="attack_groups__item-option hover-opacity">
-                          <%= link_to "削除する", attack_group_path(group.id), method: :delete, data: { confirm: "削除します。よろしいでしょうか？" } %>
+
+        <% unless @attack_groups.present? %>
+            <p class="attack_groups__no-items-title">チームが存在しません</p>
+        <% else %>
+            <div class="attack_groups__wrapper">
+                <% @attack_groups.each do |group| %>
+                    <div class="attack_groups__item">
+                        <div class="attack_groups__item-title-wrapper">
+                            <span class="attack_groups__item-title">アタックチーム<%= group.group_number %></span>
+                            <div class="attack_groups__item-option hover-opacity">
+                              <%= link_to "削除する", attack_group_path(group.id), method: :delete, data: { confirm: "削除します。よろしいでしょうか？" } %>
+                            </div>
+                        </div>
+                        <div class="attack_groups__users-item-wrapper">
+                            <% group.attackers.each do |attacker| %>
+                                <div class="attack_groups__user-item">
+                                  <div>
+                                    <%= image_tag attacker.user.user_profile.image.icon.url, class:"attack_groups__user-item-img" %>
+                                  </div>
+                                  <span>
+                                    <%= attacker.user.user_profile.name %>
+                                  </span>
+                                </div>
+                            <% end %>
                         </div>
                     </div>
-                    <div class="attack_groups__users-item-wrapper">
-                        <% group.attackers.each do |attacker| %>
-                            <div class="attack_groups__user-item">
-                              <div>
-                                <%= image_tag attacker.user.user_profile.image.icon.url, class:"attack_groups__user-item-img" %>
-                              </div>
-                              <span>
-                                <%= attacker.user.user_profile.name %>
-                              </span>
-                            </div>
-                        <% end %>
-                    </div>
-                </div>
-            <% end %>
-        </div>
+                <% end %>
+            </div>
+        <% end %>
     </div>
 </div>
 
 <style>
+.attack_groups__no-items-title{
+  text-align: center;
+  margin-top: 24px;
+}
+
 .attack_groups__item{
   padding: 24px 0;
 }
