--- a/app/views/shared/top/_post_status.html.erb
+++ b/app/views/shared/top/_post_status.html.erb
@@ -1,6 +1,6 @@
 <% if current_user.post.present? %>
   <% if current_user.post.all_member_here? %>
-    <span style="font-weight:700;">投稿済</span>
+    <%= link_to "投稿済", new_post_member_path, class:"top__user-status hover-opacity" %>
   <% else %>
     <%= link_to "招待中", new_post_member_path, class:"top__user-status hover-opacity" %>
   <% end %>  
