--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="single-page">
     <h1>
-      合コンを編集する
+      募集を編集する
     </h1>
     <%= form_with model: @post, url: post_path, local: true, method: :patch do |f| %>
       <div class="form">
