--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -1,5 +1,5 @@
 <div class="invited-member-list">
-  <p class="invited-member-list-title">📌招待中メンバー</p>
+  <p class="invited-member-list-title">📌 招待中メンバー</p>
 
   <% if @invited_user_exclude_me.blank? %>
     <span>
@@ -14,7 +14,7 @@
             <%= link_to post_member_path(member.id), method: :delete, data: { confirm: "招待した方にキャンセル通知がいきます。よろしいでしょうか？" }, class:"invite-cancel-link" do %>
               <%= image_tag "sm-cancel.png", class:"invite-cancel-img" %>
             <% end %>
-            <span class="invited-email text-ellipsis"><%= member.user.email %></span>
+            <span class="invited-email text-ellipsis"><%= member.user.user_profile.name %></span>
           </li>
         <% end %>
       </ul>
@@ -28,7 +28,7 @@
             <%= link_to post_member_path(member.id), method: :delete, data: { confirm: "招待した方にキャンセル通知がいきます。よろしいでしょうか？" }, class:"invite-cancel-link" do %>
               <%= image_tag "sm-cancel.png", class:"invite-cancel-img" %>
             <% end %>
-            <span class="invited-email text-ellipsis"><%= member.user.email %></span>
+            <span class="invited-email text-ellipsis"><%= member.user.user_profile.name %></span>
           </li>
         <% end %>
       </ul>
@@ -42,7 +42,7 @@
             <%= link_to post_member_path(member.id), method: :delete, data: { confirm: "招待した方にキャンセル通知がいきます。よろしいでしょうか？" }, class:"invite-cancel-link" do %>
               <%= image_tag "sm-cancel.png", class:"invite-cancel-img" %>
             <% end %>
-            <span class="invited-email text-ellipsis"><%= member.user.email %></span>
+            <span class="invited-email text-ellipsis"><%= member.user.user_profile.name %></span>
           </li>
         <% end %>
       </ul>
