--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -142,6 +142,7 @@
   color: #fff;
   border-radius: 10px;
   line-height: 24px;
+  font-weight: 700;
   .top__select-link{
     display: inline-block;
     width: 100%;
