--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -40,6 +40,9 @@
               <%= link_to "アタックチーム一覧", attack_groups_path, class:"drawer-menu-item" %>
             </li>
             <li>
+              <%= link_to "アタックチーム作成", new_attack_group_path, class:"drawer-menu-item" %>
+            </li>
+            <li>
               <%= link_to "募集作成", new_post_path, class:"drawer-menu-item" %>
             </li>
             <li>
