--- a/app/views/shared/top/_profile.html.erb
+++ b/app/views/shared/top/_profile.html.erb
@@ -28,7 +28,7 @@
 
     <div class="top__select-btn-wrapper">
       <button class="top__select-btn post-create-btn hover-opacity">
-        <%= link_to "募集作成", new_post_path, class:"top__select-link" %>
+        <%= link_to "📝 募集作成", new_post_path, class:"top__select-link" %>
       </button>
     </div>
 </div>
