--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -26,7 +26,7 @@
         <% end %>
 
         <div class="invite-send-btn-wrapper">
-          <%= link_to "✉ 招待する", new_post_member_path, class:"invite-send-btn app-button conversion" %>
+          <%= link_to "✉ 招待メンバーを選ぶ", new_post_member_path, class:"invite-send-btn app-button conversion" %>
         </div>
 
         <% if current_user.invite_any? %>
