--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -55,7 +55,7 @@
   flex-direction: column;
   background: #fff;
   border-radius: 8px;
-  margin: 12px 0;
+  margin-bottom: 12px;
   box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, 0.15);
   padding: 18px 0;
 }
