--- a/app/views/shared/top/_profile.html.erb
+++ b/app/views/shared/top/_profile.html.erb
@@ -13,13 +13,13 @@
             <div class="top__user-info-status-item-wrapper">
               <div class="top__user-info-status-item">
                 <%= render "shared/top/post_status" %>
-                <span>自分の募集</span>
+                <span class="top__user-info-status-title">自分の募集</span>
               </div>
             </div>
             <div>
               <div class="top__user-info-status-item">
                 <%= render "shared/top/invite_status" %>
-                <span>あなたへの招待</span>
+                <span class="top__user-info-status-title">あなたへの招待</span>
               </div>
             </div>
           </div>
