--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -129,6 +129,12 @@
         font-size: 14px;
       }
     }
+    .top__user-info-status-title{
+      font-size: 14px;
+      @media(max-width: 567px){
+        font-size: 12px;
+      }
+    }
   }
 }
 
