--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -54,7 +54,7 @@
   display: flex;
   flex-direction: column;
   background: #fff;
-  border-radius: 8px;
+  border-radius: 0px 0px 8px 8px;
   margin-bottom: 12px;
   box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, 0.15);
   padding: 18px 0;
