--- a/app/views/user/attack_groups/index.html.erb
+++ b/app/views/user/attack_groups/index.html.erb
@@ -13,7 +13,7 @@
                         <div class="attack_groups__item-title-wrapper">
                             <span class="attack_groups__item-title">アタックチーム<%= group.group_number %></span>
                             <div class="attack_groups__item-option hover-opacity">
-                              <%= link_to "削除する", attack_group_path(group.id), method: :delete, data: { confirm: "削除します。よろしいでしょうか？" } %>
+                              <%= link_to "削除する", attack_group_path(group.id), method: :delete, data: { confirm: "削除します。よろしいでしょうか？" }, class:"attack_groups__delete-btn" %>
                             </div>
                         </div>
                         <div class="attack_groups__users-item-wrapper">
@@ -52,7 +52,13 @@
 }
 
 .attack_groups__item-option{
+  display: flex;
+  align-items: flex-end;
   text-decoration: underline;
+}
+
+.attack_groups__delete-btn{
+  font-size: 12px;
 }
 
 .attack_groups__users-item-wrapper{
