--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="single-page">
     <h1>
-      アタックチーム作成
+      新規アタックチーム作成
     </h1>
 
     <% if current_user.attack_groups.present? %>
