--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -18,9 +18,9 @@
       <span class="sp-sub-title">すでにアカウントを持っている人を選択する</span>
     </div>
 
-    <% if current_user.friend_users.blank? %>
+    <% if current_user.friend_users.same_sex(current_user).blank? %>
         <p class="post-member__exception-title">
-          <span>フレンドがいません。</span>
+          <span>(同性の)フレンドがいません。</span>
           <span>
             ヘッダーの <%= image_tag "add-friend.png", class:"post-member__exception-search-img" %> からフレンド追加できます。
           </span>
@@ -29,7 +29,7 @@
         <%= render "shared/friend_list",
           model: @attackers,
           url: attack_groups_path,
-          listed_friends: @host_friends
+          listed_friends: @hosts_friends
         %>
     <% end %>
 
