--- a/app/views/user/attack_groups/index.html.erb
+++ b/app/views/user/attack_groups/index.html.erb
@@ -13,7 +13,7 @@
                 <% @attack_groups.each do |group| %>
                     <div class="attack_groups__item">
                         <div class="attack_groups__item-title-wrapper">
-                            <span class="attack_groups__item-title">アタックチーム<%= group.group_number %></span>
+                            <span class="attack_groups__item-title">チーム<%= group.group_number %></span>
                             <div class="attack_groups__item-option hover-opacity">
                               <%= link_to "チーム削除する", attack_group_path(group.id), method: :delete, data: { confirm: "削除します。よろしいでしょうか？" }, class:"attack_groups__delete-btn" %>
                             </div>
