--- a/app/views/shared/_friend_list.html.erb
+++ b/app/views/shared/_friend_list.html.erb
@@ -18,7 +18,7 @@
       </div>
       <div class="field">
         <div class="button-wrapper">
-          <%= f.submit "招待確定する", class:"app-button conversion" %>
+          <%= f.submit "招待確定する", class:"app-button conversion", style: "min-width: 180px;" %>
         </div>
       </div>
     </div>
