--- a/app/views/shared/_register_invite.html.erb
+++ b/app/views/shared/_register_invite.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="field">
       <div class="button-wrapper">
-        <%= f.submit "✉ 招待メールを送信", class:"app-button conversion" %>
+        <%= f.submit "✉ 招待メールを送信", class:"app-button conversion", style: "min-width: 180px;" %>
       </div>
     </div>
   </div>
