--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,9 +14,9 @@
             </label>
           </div>
           <%= f.radio_button :sex, :male %>
-          <%= f.label :sex_male, "男性" %>
+          <%= f.label :sex_male, "男性", class:"sex-radio-btn male-radio" %>
           <%= f.radio_button :sex, :female %>
-          <%= f.label :sex_female, "女性" %>
+          <%= f.label :sex_female, "女性", class:"sex-radio-btn female-radio" %>
         </div>
         <div class="field">
           <div class="label">
