--- a/app/views/user/user_profiles/edit.html.erb
+++ b/app/views/user/user_profiles/edit.html.erb
@@ -37,7 +37,7 @@
               年齢
             </label>
           </div>
-          <%= f.select :age, options_for_select((18..80).to_a), {prompt: "選択してください"} %>
+          <%= f.select :age, options_for_select((18..80).to_a), {prompt: "選択してください"}, class:"edit-profile-select" %>
         </div>
         <div class="field">
           <div class="label">
@@ -45,7 +45,7 @@
               職業
             </label>
           </div>
-          <%= f.select :job, UserProfile.jobs_i18n.keys.map { |k| [UserProfile.jobs_i18n[k], k]}, {prompt: "選択してください"} %>
+          <%= f.select :job, UserProfile.jobs_i18n.keys.map { |k| [UserProfile.jobs_i18n[k], k]}, {prompt: "選択してください"}, class:"edit-profile-select" %>
         </div>
         
 
