--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -20,9 +20,9 @@
 
     <% if current_user.friend_users.same_sex(current_user).blank? %>
         <p class="post-member__exception-title">
-          <span>(同性の)フレンドがいません。</span>
+          <span>(同性の)フレンドがいません</span>
           <span>
-            ヘッダーの <%= image_tag "add-friend.png", class:"post-member__exception-search-img" %> からフレンド追加できます。
+            ヘッダーの <%= image_tag "add-friend.png", class:"post-member__exception-search-img" %> からフレンド追加できます
           </span>
         </p>
     <% else %>
@@ -40,7 +40,7 @@
       <span class="sp-sub-title">アカウントを持っていない人を招待する</span>
     </div>
 
-    <div class="post-member-form">
+    <div class="post-member-form" style="margin-top: 28px;">
       <%= render "shared/register_invite" %>
     </div>
   </div>
