--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -21,7 +21,7 @@
 
     <% if current_user.friend_users.same_sex(current_user).blank? %>
         <p class="post-member__exception-title">
-          <span>(同性の)フレンドがいません。</span>
+          <span>(同性の)フレンドがいません</span>
           <span>
             ヘッダーの <%= image_tag "add-friend.png", class:"post-member__exception-search-img" %> からフレンド追加できます。
           </span>
