--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -37,6 +37,8 @@ header > .container{
 }
 
 .drawer-menu-item{
+  font-size: 0.9rem!important;
+  color: #001858!important;
   padding: 0 20px!important;
   line-height: 46px!important;
 }
@@ -72,6 +74,7 @@ header > .container{
 }
 .drawer-menu__user-name{
   font-weight: 700;
+  color: #001858!important;
 }
 
 .drawer-menu__option-wrapper{
