--- a/app/assets/stylesheets/invite.scss
+++ b/app/assets/stylesheets/invite.scss
@@ -42,6 +42,10 @@
   }
 }
 
+.post-member-form{
+  padding: 32px 0;
+}
+
 .post-member__exception-title{
   text-align: center;
   padding: 28px 0px;
