--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -40,7 +40,7 @@
       <span class="sp-sub-title">アカウントを持っていない人を招待する</span>
     </div>
 
-    <div class="post-member-form" style="margin-top: 28px;">
+    <div class="post-member-form">
       <%= render "shared/register_invite" %>
     </div>
   </div>
