--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -55,3 +55,7 @@ input[type=text],input[type=password],input[type=email],input[type=submit],selec
   align-items: center;
   margin-right: 6px;
 }
+
+.swiper-button-disabled{
+  display: none!important;
+}
