--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -59,3 +59,7 @@ input[type=text],input[type=password],input[type=email],input[type=submit],selec
 .swiper-button-disabled{
   display: none!important;
 }
+
+.swiper-slide-next{
+  display: none!important;
+}
