--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -60,6 +60,6 @@ input[type=text],input[type=password],input[type=email],input[type=submit],selec
   display: none!important;
 }
 
-.swiper-slide-next{
-  display: none!important;
-}
+// .swiper-slide-next{
+//   display: none!important;
+// }
