--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -88,7 +88,7 @@
     min-width: 120px;
   }
   input:focus, select:focus{
-    border: 3px solid #f3d2c1;
+    border: 3px solid #8bd3dd;
   }
   #user_profile_age, #user_profile_job{
     @media(max-width: 567px){
