--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -23,7 +23,7 @@
         <p class="post-member__exception-title">
           <span>(同性の)フレンドがいません</span>
           <span>
-            ヘッダーの <%= image_tag "add-friend.png", class:"post-member__exception-search-img" %> からフレンド追加できます。
+            ヘッダーの <%= image_tag "add-friend.png", class:"post-member__exception-search-img" %> からフレンド追加できます
           </span>
         </p>
     <% else %>
