--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -33,7 +33,15 @@
         %>
     <% end %>
 
-    <%= render "shared/register_invite" %>
+    <div class="lines-on-sides">
+      <span>アカウントを持っていない人を招待する</span>
+    </div>
+    <div class="sp-sub-text-wrapper">
+      <span class="sp-sub-title">アカウントを持っていない人を招待する</span>
+    </div>
 
+    <div class="post-member-form">
+      <%= render "shared/register_invite" %>
+    </div>
   </div>
 </div>
