--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -47,8 +47,9 @@
       <span class="sp-sub-title">アカウントを持っていない人を招待する</span>
     </div>
 
-    <%= render "shared/register_invite" %>
-
+    <div class="post-member-form">
+      <%= render "shared/register_invite" %>
+    </div>
   </div>
 </div>
 
