--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -66,29 +66,31 @@
   }
   // チェックボックス ここまで
   input{
-    border-radius: .28571429rem;
+    border-radius: 5rem;
     box-shadow: inset 0 0 0 0 transparent;
     transition: color .1s ease,border-color .1s ease;
     box-sizing: border-box;
   }
   input[type=text],input[type=password],input[type=email]{
-    padding: 10px 12px;
+    padding: 12px 16px;
     font-size: 14px;
     line-height: 1.21428571em;
     width: 100%;
-    border: 1px solid #172c66;
+    border:2px solid #ddd;
   }
   select{
-    padding: 10px 12px;
+    padding: 12px 16px;
     line-height: 1.21428571em;
-    border: 1px solid #172c66;
-    border-radius: .28571429rem;
+    border:2px solid #ddd;
+    border-radius: 5rem;
   }
   .edit-profile-select{
     min-width: 120px;
   }
   input:focus, select:focus{
-    border: 3px solid #8bd3dd;
+    // border: 3px solid #8bd3dd;
+    border-color: #80bdff;
+    box-shadow: 0px 0px 0px 0.2rem rgba(0, 123, 255, 0.25);
   }
   #user_profile_age, #user_profile_job{
     @media(max-width: 567px){
@@ -106,7 +108,7 @@
   box-sizing: border-box;
   padding: 0 16px;
   border: 2px solid #777;
-  border-radius: 4px;
+  border-radius: 5rem;
   font-size: 1rem;
 }
 
