--- a/app/assets/stylesheets/btn.scss
+++ b/app/assets/stylesheets/btn.scss
@@ -12,8 +12,9 @@
 }
 
 .activeModalBtn{
-  border: 1px solid #f582ae;
-  color: #f582ae;
+  background: #8bd3dd;
+  border: 1px solid #8bd3dd;
+  color: #fff;
   cursor: pointer;
   &:hover{
     opacity: .7;
