--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -114,8 +114,8 @@
 
 .conversion{
   color: #fff;
-  border-color: #f582ae;
-  background: #f582ae;
+  border-color:#8bd3dd;
+  background: #8bd3dd;
   &:hover{
     opacity: .7;
   }
