--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   // font-family: sans-serif;
-  background: #fef6e4;
+  background: #001534;
   color: #172c66;
   font-family: 'Noto Sans', sans-serif;
   // font-family: -apple-system,BlinkMacSystemFont,\\6E38\30B4\30B7\30C3\30AF\4F53,Yu Gothic,YuGothic,sans-serif;
