--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -4,6 +4,10 @@
   margin: 0 auto;
 }
 
+.top{
+  margin: 0 8px;
+}
+
 .top__background{
   display: flex;
   align-items: center;
@@ -95,12 +99,12 @@
   background: #fff;
   border-radius: 8px;
   margin: 12px 0px;
-  box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, 0.15);
+  // box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, 0.15);
   padding: 18px 0;
-  @media(max-width: 567px){
-    border-radius: 0px 0px 8px 8px;
-    margin: 0 0 12px 0;
-  }
+  // @media(max-width: 567px){
+  //   border-radius: 0px 0px 8px 8px;
+  //   margin: 0 0 12px 0;
+  // }
 }
 
 .top__user-profile{
