--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -39,8 +39,8 @@
 
             <div class="drawer-menu__option-wrapper">
               <div class="drawer-menu__title-wrapper">
-                <span class="drawer-menu__title drawer-menu__attack-menu">アタックメニュー</span>
-                <span class="drawer-menu__title-line attack-title-line"></span>
+                <span class="drawer-menu__title">アタックメニュー</span>
+                <span class="drawer-menu__title-line"></span>
               </div>
 
               <div>
@@ -53,8 +53,8 @@
 
             <div class="drawer-menu__option-wrapper">
               <div class="drawer-menu__title-wrapper">
-                <span class="drawer-menu__title drawer-menu__post-menu">募集メニュー</span>
-                <span class="drawer-menu__title-line post-title-line"></span>
+                <span class="drawer-menu__title">募集メニュー</span>
+                <span class="drawer-menu__title-line"></span>
               </div>
 
               <div>
