--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -32,7 +32,9 @@
           listed_friends: @hosts_friends
         %>
     <% end %>
+  </div>
 
+  <div class="single-page">
     <div class="lines-on-sides">
       <span>アカウントを持っていない人を招待する</span>
     </div>
