--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -52,7 +52,9 @@
         <% end %>
     <% end %>
     -->
+  </div>
 
+  <div class="single-page">
     <div class="lines-on-sides">
       <span>アカウントを持っていない人を招待する</span>
     </div>
