--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -28,9 +28,9 @@
       <div class="top">
         <%= render "shared/top/profile" %>
 
-        <div class="index-title-wrapper">
+        <%# <div class="index-title-wrapper">
           <span class="index-title">募集一覧</span>
-        </div>
+        </div> %>
 
         <%= render "shared/top/index" %>
       </div>
@@ -48,7 +48,7 @@
   box-sizing: border-box;
 }
 
-.index-title-wrapper{
+/* .index-title-wrapper{
   background: #fff;
   border-radius: 10px;
   margin-bottom: 12px;
@@ -63,7 +63,7 @@
   width: 100%;
   font-weight: 700;
   letter-spacing: 2.4px;
-}
+} */
 
 .index-title::before,
 .index-title::after {
